# sudoku-solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  main.cpp  run_conan_install.ps1  run_conan_install.sh
src/: CMakeLists.txt  json_handling.cpp  json_handling.h  main.cpp  puzzle_type.h  solving_logic.cpp  solving_logic.h  sudoku-solver.cpp
test_data/: invalid_puzzles.json  puzzle_all_one_row.json  simple_puzzles.json  single_puzzle.json
tests/: CMakeLists.txt  json_handling_test.cpp  solving_logic_test.cpp
